// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio snapshots Radio: 0 1`] = `
<div
  className="radio-0-1-5"
>
  <input
    checked={true}
    className="radio_input-0-1-7"
    defaultChecked={false}
    disabled={null}
    id="radio01"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-8"
  />
  <label
    className="label-0-1-9"
    slot="label"
  >
    Label
  </label>
</div>
`;

exports[`radio snapshots Radio: 1 1`] = `
<div
  className="radio-0-1-15"
>
  <input
    checked={null}
    className="radio_input-0-1-17"
    defaultChecked={false}
    disabled={null}
    id="checked"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-18"
  />
  <label
    className="label-0-1-19"
    slot="label"
  >
    Label Controlled (Checked)
  </label>
</div>
`;

exports[`radio snapshots Radio: 2 1`] = `
<div
  className="radio-0-1-25 radio__disabled-0-1-26"
>
  <input
    checked={true}
    className="radio_input-0-1-27"
    defaultChecked={false}
    disabled={true}
    id="disabled"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-28"
  />
  <label
    className="label-0-1-29"
    slot="label"
  >
    Label (Disabled)
  </label>
</div>
`;

exports[`radio snapshots Radio: 3 1`] = `
<div
  className="radio-0-1-35"
>
  <input
    checked={true}
    className="radio_input-0-1-37"
    defaultChecked={false}
    disabled={null}
    id="divLabel"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-38"
  />
  <div
    slot="label"
  >
    div label
  </div>
</div>
`;
